--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         .nav-links a { color: rgba(255,255,255,0.7); text-decoration: none; font-size: 14px; font-weight: 500; transition: color 0.2s; }
         .nav-links a:hover { color: var(--white); }
         .btn { display: inline-flex; align-items: center; justify-content: center; gap: 8px; padding: 12px 24px; font-size: 14px; font-weight: 600; text-decoration: none; border-radius: 10px; transition: all 0.3s; cursor: pointer; border: none; font-family: inherit; }
-        .btn-primary { background: linear-gradient(135deg, var(--blue) 0%, var(--blue-bright) 100%); color: var(--white); box-shadow: 0 4px 15px rgba(59, 130, 246, 0.35); }
+        .btn-primary { background: linear-gradient(135deg, var(--blue) 0%, var(--blue-bright) 100%); color: var(--white); box-shadow: 0 4px 15px rgba(59, 130, 246, 0.35); white-space: nowrap; }
         .btn-primary:hover { box-shadow: 0 8px 30px rgba(59, 130, 246, 0.45); transform: translateY(-2px); }
+        .btn-primary:disabled { opacity: 0.7; cursor: not-allowed; transform: none; }
         .btn-white { background: var(--white); color: var(--navy); }
         .btn-white:hover { background: var(--gray-100); transform: translateY(-2px); }
         .btn-dark { background: var(--navy); color: var(--white); }
@@ -66,13 +67,13 @@
         .value-icon svg { width: 28px; height: 28px; color: var(--blue); }
         .value-item h3 { font-size: 20px; font-weight: 700; margin-bottom: 8px; color: var(--gray-900); }
         .value-item p { font-size: 15px; color: var(--gray-500); line-height: 1.6; }
-        .section { padding: 120px 0; }
+        .section { padding: 120px 0; background: var(--white); }
         .section-dark { background: var(--navy); color: var(--white); }
         .section-gray { background: var(--gray-50); }
         .section-header { text-align: center; max-width: 700px; margin: 0 auto 64px; }
         .section-label { display: inline-flex; font-size: 13px; font-weight: 700; color: var(--blue); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 16px; }
         .section-dark .section-label { color: var(--blue-light); }
-        .section-title { font-size: clamp(32px, 4vw, 44px); font-weight: 800; margin-bottom: 20px; }
+        .section-title { font-size: clamp(32px, 4vw, 44px); font-weight: 800; margin-bottom: 20px; color: var(--gray-900); }
         .section-dark .section-title { color: var(--white); }
         .section-desc { font-size: 18px; color: var(--gray-500); line-height: 1.7; }
         .section-dark .section-desc { color: rgba(255,255,255,0.6); }
@@ -145,6 +146,13 @@
         .form-submit { width: 100%; padding: 18px; font-size: 16px; }
         .required { color: var(--red); }
         .form-note { font-size: 13px; color: var(--gray-500); margin-top: 16px; text-align: center; }
+        .modal-overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 2000; align-items: center; justify-content: center; backdrop-filter: blur(4px); }
+        .modal-overlay.show { display: flex; }
+        .modal { background: var(--white); border-radius: 24px; padding: 48px; max-width: 440px; text-align: center; box-shadow: 0 25px 80px rgba(0,0,0,0.3); margin: 20px; }
+        .modal svg { width: 64px; height: 64px; color: #22c55e; margin-bottom: 24px; }
+        .modal h3 { font-size: 28px; margin-bottom: 12px; color: var(--gray-900); }
+        .modal p { font-size: 16px; color: var(--gray-500); margin-bottom: 32px; line-height: 1.6; }
+        .modal .btn { min-width: 160px; }
         footer { background: var(--navy); color: var(--white); padding: 80px 0 40px; }
         .footer-main { display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 60px; margin-bottom: 60px; }
         .footer-brand .logo { margin-bottom: 20px; }
@@ -166,6 +174,7 @@
         }
         @media (max-width: 768px) {
             .nav-links { display: none; } .mobile-menu-btn { display: block; }
+            nav .btn-primary { display: none; }
             .hero h1 { font-size: 36px; } .hero-description { font-size: 17px; }
             .hero-actions { flex-direction: column; } .hero-sectors { justify-content: center; }
             .domains-grid { grid-template-columns: repeat(2, 1fr); } .process-grid { grid-template-columns: 1fr; }
@@ -335,11 +344,11 @@
                     <p>Tell us about your initiative and we'll get back to you within one business day.</p>
                     <div class="contact-methods">
                         <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z"/></svg></div><div class="contact-method-text"><span>Phone</span><a href="tel:4438425595">(443) 842-5595</a></div></div>
-                        <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg></div><div class="contact-method-text"><span>Email</span><a href="mailto:info@chesapeake.biz">info@chesapeake.biz</a></div></div>
+                        <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg></div><div class="contact-method-text"><span>Email</span><a href="/cdn-cgi/l/email-protection#bed7d0d8d1feddd6dbcddfcedbdfd5db90dcd7c4"><span class="__cf_email__" data-cfemail="224b4c444d62414a47514352474349470c404b58">[email&#160;protected]</span></a></div></div>
                         <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg></div><div class="contact-method-text"><span>Location</span><p>Baltimore, Maryland</p></div></div>
                     </div>
                 </div>
-                <form class="contact-form" action="https://formspree.io/f/xaqnrbzl" method="POST">
+                <form class="contact-form" id="contactForm">
                     <div class="form-row">
                         <div class="form-group"><label for="firstName">First name <span class="required">*</span></label><input type="text" id="firstName" name="firstName" placeholder="John" required></div>
                         <div class="form-group"><label for="lastName">Last name <span class="required">*</span></label><input type="text" id="lastName" name="lastName" placeholder="Smith" required></div>
@@ -347,12 +356,20 @@
                     <div class="form-group"><label for="email">Email <span class="required">*</span></label><input type="email" id="email" name="email" placeholder="john@company.com" required></div>
                     <div class="form-group"><label for="interest">What do you need?</label><select id="interest" name="interest"><option value="">Select an option</option><option value="advisory">Strategic Advisory</option><option value="leadership">Program Leadership</option><option value="both">Both</option><option value="project-info">Recent Project Info</option><option value="not-sure">Not sure yet</option></select></div>
                     <div class="form-group"><label for="message">Tell us about your initiative</label><textarea id="message" name="message" placeholder="What are you trying to accomplish?"></textarea></div>
-                    <button type="submit" class="btn btn-primary form-submit">Send message</button>
+                    <button type="submit" class="btn btn-primary form-submit" id="submitBtn">Send message</button>
                     <p class="form-note">Fields marked with <span class="required">*</span> are required</p>
                 </form>
             </div>
         </div>
     </section>
+    <div class="modal-overlay" id="thankYouModal">
+        <div class="modal">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 11.08V12a10 10 0 11-5.93-9.14"/><path d="M22 4L12 14.01l-3-3"/></svg>
+            <h3>Message sent!</h3>
+            <p>Thank you for reaching out. We'll get back to you within one business day.</p>
+            <button class="btn btn-primary" onclick="document.getElementById('thankYouModal').classList.remove('show')">Close</button>
+        </div>
+    </div>
     <footer>
         <div class="container">
             <div class="footer-main">
@@ -367,11 +384,32 @@
             </div>
         </div>
     </footer>
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+        // Mobile menu
         const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
         const navLinks = document.querySelector('.nav-links');
-        mobileMenuBtn.addEventListener('click', () => navLinks.classList.toggle('active'));
-        navLinks.querySelectorAll('a').forEach(link => link.addEventListener('click', () => navLinks.classList.remove('active')));
-    </script>
-</body>
-</html>
+        mobileMenuBtn.addEventListener('click', function() { navLinks.classList.toggle('active'); });
+        navLinks.querySelectorAll('a').forEach(function(link) { link.addEventListener('click', function() { navLinks.classList.remove('active'); }); });
+        
+        // Form submission with AJAX
+        document.getElementById('contactForm').addEventListener('submit', async function(e) {
+            e.preventDefault();
+            const form = e.target;
+            const submitBtn = document.getElementById('submitBtn');
+            const originalText = submitBtn.textContent;
+            submitBtn.textContent = 'Sending...';
+            submitBtn.disabled = true;
+            
+            try {
+                const response = await fetch('https://formspree.io/f/xaqnrbzl', {
+                    method: 'POST',
+                    body: new FormData(form),
+                    headers: { 'Accept': 'application/json' }
+                });
+                if (response.ok) {
+                    form.reset();
+                    document.getElementById('thankYouModal').classList.add('show');
+                } else {
+                    alert('There was a problem sending your message. Please try again.');
+                }
+            } catch
