--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         <div class="form-group"><label for="lastName">Last name <span class="required">*</span></label><input type="text" id="lastName" name="lastName" placeholder="Smith" required></div>
                     </div>
                     <div class="form-group"><label for="email">Email <span class="required">*</span></label><input type="email" id="email" name="email" placeholder="john@company.com" required></div>
-                    <div class="form-group"><label for="interest">What do you need?</label><select id="interest" name="interest"><option value="">Select an option</option><option value="advisory">Strategic Advisory</option><option value="leadership">Program Leadership</option><option value="both">Both</option><option value="project-info">Recent Project Info</option><option value="not-sure">Not sure yet</option></select></div>
+                    <div class="form-group"><label for="interest">What do you need?</label><select id="interest" name="interest"><option value="">Select an option</option><option value="advisory">Strategic Advisory</option><option value="leadership">Program Leadership</option><option value="project-info">Recent Project Info</option><option value="not-sure">Not sure yet</option></select></div>
                     <div class="form-group"><label for="message">Tell us about your initiative</label><textarea id="message" name="message" placeholder="What are you trying to accomplish?"></textarea></div>
                     <button type="submit" class="btn btn-primary form-submit" id="submitBtn">Send message</button>
                     <p class="form-note">Fields marked with <span class="required">*</span> are required</p>
