--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             .value-strip-grid { grid-template-columns: 1fr; gap: 40px; }
         }
         @media (max-width: 768px) {
-            .nav-links { display: none; } .mobile-menu-btn { display: block; }
+            .nav-links { display: none; } .mobile-menu-btn { display: block; } nav .btn-primary { display: none; }
             .hero h1 { font-size: 36px; } .hero-description { font-size: 17px; }
             .hero-actions { flex-direction: column; } .hero-sectors { justify-content: center; }
             .domains-grid { grid-template-columns: repeat(2, 1fr); } .process-grid { grid-template-columns: 1fr; }
