--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
         .section-desc { font-size: 18px; color: var(--gray-500); line-height: 1.7; }
         .section-dark .section-desc { color: rgba(255,255,255,0.6); }
         .services-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 32px; }
+        .spotlight-callout { margin-top: 48px; background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 50%, #f0f9ff 100%); border: 1px solid rgba(59, 130, 246, 0.15); border-radius: 20px; padding: 48px; display: flex; align-items: center; gap: 40px; position: relative; overflow: hidden; }
+        .spotlight-callout::before { content: ''; position: absolute; top: -50%; right: -20%; width: 60%; height: 150%; background: radial-gradient(ellipse, rgba(59, 130, 246, 0.08) 0%, transparent 60%); pointer-events: none; }
+        .spotlight-icon { width: 80px; height: 80px; background: linear-gradient(135deg, var(--blue) 0%, var(--blue-bright) 100%); border-radius: 20px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 12px 32px rgba(59, 130, 246, 0.25); position: relative; z-index: 1; }
+        .spotlight-icon svg { width: 40px; height: 40px; color: var(--white); }
+        .spotlight-content { flex: 1; position: relative; z-index: 1; }
+        .spotlight-content h3 { font-size: 24px; font-weight: 700; color: var(--gray-900); margin-bottom: 12px; }
+        .spotlight-content p { font-size: 16px; color: var(--gray-600); line-height: 1.7; margin-bottom: 24px; max-width: 600px; }
+        .spotlight-features { display: flex; flex-wrap: wrap; gap: 16px; margin-bottom: 24px; }
+        .spotlight-feature { display: flex; align-items: center; gap: 8px; font-size: 14px; color: var(--gray-700); font-weight: 500; }
+        .spotlight-feature svg { width: 18px; height: 18px; color: var(--blue); }
+        .spotlight-cta { display: inline-flex; align-items: center; gap: 8px; padding: 12px 24px; background: linear-gradient(135deg, var(--blue) 0%, var(--blue-bright) 100%); color: var(--white); font-size: 14px; font-weight: 600; text-decoration: none; border-radius: 10px; transition: all 0.3s; box-shadow: 0 4px 15px rgba(59, 130, 246, 0.35); }
+        .spotlight-cta:hover { box-shadow: 0 8px 25px rgba(59, 130, 246, 0.45); transform: translateY(-2px); }
+        .spotlight-cta svg { width: 16px; height: 16px; transition: transform 0.3s; }
+        .spotlight-cta:hover svg { transform: translateX(4px); }
         .service-card { background: var(--white); border: 1px solid var(--gray-200); border-radius: 20px; padding: 48px; position: relative; overflow: hidden; transition: all 0.4s; }
         .service-card::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 4px; background: linear-gradient(90deg, var(--blue) 0%, var(--blue-bright) 100%); transform: scaleX(0); transform-origin: left; transition: transform 0.4s; }
         .service-card:hover { border-color: var(--blue); box-shadow: 0 20px 60px rgba(59, 130, 246, 0.1); transform: translateY(-4px); }
@@ -171,6 +185,9 @@
             .process-grid { grid-template-columns: repeat(2, 1fr); gap: 40px; } .process-grid::before { display: none; }
             .contact-grid { grid-template-columns: 1fr; gap: 60px; } .footer-main { grid-template-columns: 1fr 1fr; gap: 40px; }
             .value-strip-grid { grid-template-columns: 1fr; gap: 40px; }
+            .spotlight-callout { flex-direction: column; text-align: center; padding: 40px 32px; }
+            .spotlight-content p { max-width: 100%; }
+            .spotlight-features { justify-content: center; }
         }
         @media (max-width: 768px) {
             .nav-links { display: none; } .mobile-menu-btn { display: block; } nav .btn-primary { display: none; }
@@ -180,6 +197,13 @@
             .work-info { flex-direction: column; align-items: flex-start; gap: 12px; }
             .form-row { grid-template-columns: 1fr; } .cta-actions { flex-direction: column; align-items: center; }
             .footer-main { grid-template-columns: 1fr; } .footer-bottom { flex-direction: column; gap: 20px; text-align: center; }
+            .spotlight-callout { padding: 32px 24px; }
+            .spotlight-icon { width: 64px; height: 64px; }
+            .spotlight-icon svg { width: 32px; height: 32px; }
+            .spotlight-content h3 { font-size: 20px; }
+            .spotlight-content p { font-size: 15px; }
+            .spotlight-features { flex-direction: column; gap: 12px; align-items: center; }
+            .spotlight-feature { font-size: 13px; }
         }
         @media (max-width: 480px) { .domains-grid { grid-template-columns: 1fr; } .sector-pill { font-size: 12px; padding: 8px 14px; } }
     </style>
@@ -259,6 +283,21 @@
                     <h3>Program Leadership</h3>
                     <p>Taking something critical and making it succeed. We own delivery—managing complexity, coordinating stakeholders, and driving outcomes.</p>
                     <ul class="service-list"><li>Enterprise IT program leadership</li><li>Large-scale implementations</li><li>Vendor management</li><li>Executive reporting and oversight</li><li>Project correction</li></ul>
+                </div>
+            </div>
+            <div class="spotlight-callout">
+                <div class="spotlight-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
+                </div>
+                <div class="spotlight-content">
+                    <h3>AI-Powered Productivity with Microsoft 365</h3>
+                    <p>We're helping clients harness the latest AI and M365 tools to transform how teams work—automating action items, streamlining email management, and simplifying scheduling.</p>
+                    <div class="spotlight-features">
+                        <span class="spotlight-feature"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 11l3 3L22 4"/><path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/></svg>Meeting to action item automation</span>
+                        <span class="spotlight-feature"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg>Smart email prioritization</span>
+                        <span class="spotlight-feature"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="4" width="18" height="18" rx="2"/><path d="M16 2v4"/><path d="M8 2v4"/><path d="M3 10h18"/></svg>Intelligent scheduling</span>
+                    </div>
+                    <a href="#contact" class="spotlight-cta">Learn how we can help<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12h14"/><path d="M12 5l7 7-7 7"/></svg></a>
                 </div>
             </div>
         </div>
@@ -343,7 +382,7 @@
                     <p>Tell us about your initiative and we'll get back to you within one business day.</p>
                     <div class="contact-methods">
                         <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z"/></svg></div><div class="contact-method-text"><span>Phone</span><a href="tel:4438425595">(443) 842-5595</a></div></div>
-                        <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg></div><div class="contact-method-text"><span>Email</span><a href="mailto:info@chesapeake.biz">info@chesapeake.biz</a></div></div>
+                        <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg></div><div class="contact-method-text"><span>Email</span><a href="/cdn-cgi/l/email-protection#6f060109002f0c070a1c0e1f0a0e040a410d0615"><span class="__cf_email__" data-cfemail="a6cfc8c0c9e6c5cec3d5c7d6c3c7cdc388c4cfdc">[email&#160;protected]</span></a></div></div>
                         <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg></div><div class="contact-method-text"><span>Location</span><p>Baltimore, Maryland</p></div></div>
                     </div>
                 </div>
@@ -353,7 +392,7 @@
                         <div class="form-group"><label for="lastName">Last name <span class="required">*</span></label><input type="text" id="lastName" name="lastName" placeholder="Smith" required></div>
                     </div>
                     <div class="form-group"><label for="email">Email <span class="required">*</span></label><input type="email" id="email" name="email" placeholder="john@company.com" required></div>
-                    <div class="form-group"><label for="interest">What do you need?</label><select id="interest" name="interest"><option value="">Select an option</option><option value="advisory">Strategic Advisory</option><option value="leadership">Program Leadership</option><option value="project-info">Recent Project Info</option><option value="not-sure">Not sure yet</option></select></div>
+                    <div class="form-group"><label for="interest">What do you need?</label><select id="interest" name="interest"><option value="">Select an option</option><option value="advisory">Strategic Advisory</option><option value="leadership">Program Leadership</option><option value="ai-m365">AI M365 Productivity</option><option value="project-info">Recent Project Info</option><option value="not-sure">Not sure yet</option></select></div>
                     <div class="form-group"><label for="message">Tell us about your initiative</label><textarea id="message" name="message" placeholder="What are you trying to accomplish?"></textarea></div>
                     <button type="submit" class="btn btn-primary form-submit" id="submitBtn">Send message</button>
                     <p class="form-note">Fields marked with <span class="required">*</span> are required</p>
@@ -383,7 +422,7 @@
             </div>
         </div>
     </footer>
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Mobile menu
         const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
         const navLinks = document.querySelector('.nav-links');
@@ -411,12 +450,4 @@
                 } else {
                     alert('There was a problem sending your message. Please try again.');
                 }
-            } catch (error) {
-                alert('There was a problem sending your message. Please try again.');
-            }
-            submitBtn.textContent = originalText;
-            submitBtn.disabled = false;
-        });
-    </script>
-</body>
-</html>
+            } catch
