--- a/index.html
+++ b/index.html
@@ -428,6 +428,19 @@
         const navLinks = document.querySelector('.nav-links');
         mobileMenuBtn.addEventListener('click', function() { navLinks.classList.toggle('active'); });
         navLinks.querySelectorAll('a').forEach(function(link) { link.addEventListener('click', function() { navLinks.classList.remove('active'); }); });
+
+        // On mobile, scroll to form instead of contact section
+        document.querySelectorAll('a[href="#contact"]').forEach(function(link) {
+            link.addEventListener('click', function(e) {
+                if (window.innerWidth <= 768) {
+                    e.preventDefault();
+                    const form = document.getElementById('contactForm');
+                    if (form) {
+                        form.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                    }
+                }
+            });
+        });
         
         // Form submission with AJAX
         document.getElementById('contactForm').addEventListener('submit', async function(e) {
@@ -466,6 +479,15 @@
                 if (interestSelect) {
                     interestSelect.value = interest;
                 }
+            }
+            // On mobile, if page loads with #contact hash, scroll to form
+            if (window.location.hash === '#contact' && window.innerWidth <= 768) {
+                setTimeout(function() {
+                    const form = document.getElementById('contactForm');
+                    if (form) {
+                        form.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                    }
+                }, 100);
             }
         })();
     </script>
