--- a/ai-m365.html
+++ b/ai-m365.html
@@ -599,6 +599,19 @@
         mobileMenuBtn.addEventListener('click', function() { navLinks.classList.toggle('active'); });
         navLinks.querySelectorAll('a').forEach(function(link) { link.addEventListener('click', function() { navLinks.classList.remove('active'); }); });
 
+        // On mobile, scroll to form instead of contact section
+        document.querySelectorAll('a[href="#contact"]').forEach(function(link) {
+            link.addEventListener('click', function(e) {
+                if (window.innerWidth <= 768) {
+                    e.preventDefault();
+                    const form = document.getElementById('contactForm');
+                    if (form) {
+                        form.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                    }
+                }
+            });
+        });
+
         // Form submission with AJAX
         document.getElementById('contactForm').addEventListener('submit', async function(e) {
             e.preventDefault();
@@ -628,6 +641,16 @@
             submitBtn.textContent = originalText;
             submitBtn.disabled = false;
         });
+
+        // On mobile, if page loads with #contact hash, scroll to form
+        if (window.location.hash === '#contact' && window.innerWidth <= 768) {
+            setTimeout(function() {
+                const form = document.getElementById('contactForm');
+                if (form) {
+                    form.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                }
+            }, 100);
+        }
     </script>
 </body>
 </html>
