--- a/ai-m365.html
+++ b/ai-m365.html
@@ -599,17 +599,34 @@
         mobileMenuBtn.addEventListener('click', function() { navLinks.classList.toggle('active'); });
         navLinks.querySelectorAll('a').forEach(function(link) { link.addEventListener('click', function() { navLinks.classList.remove('active'); }); });
 
+        // Function to scroll to form on mobile
+        function scrollToFormOnMobile() {
+            if (window.innerWidth <= 768) {
+                const form = document.getElementById('contactForm');
+                if (form) {
+                    const navHeight = 70;
+                    const formTop = form.getBoundingClientRect().top + window.pageYOffset - navHeight;
+                    window.scrollTo({ top: formTop, behavior: 'smooth' });
+                }
+            }
+        }
+
         // On mobile, scroll to form instead of contact section
         document.querySelectorAll('a[href="#contact"]').forEach(function(link) {
             link.addEventListener('click', function(e) {
                 if (window.innerWidth <= 768) {
                     e.preventDefault();
-                    const form = document.getElementById('contactForm');
-                    if (form) {
-                        form.scrollIntoView({ behavior: 'smooth', block: 'start' });
-                    }
+                    history.pushState(null, null, '#contact');
+                    scrollToFormOnMobile();
                 }
             });
+        });
+
+        // On page load, if #contact hash, scroll to form on mobile
+        window.addEventListener('load', function() {
+            if (window.location.hash === '#contact') {
+                setTimeout(scrollToFormOnMobile, 300);
+            }
         });
 
         // Form submission with AJAX
@@ -641,16 +658,6 @@
             submitBtn.textContent = originalText;
             submitBtn.disabled = false;
         });
-
-        // On mobile, if page loads with #contact hash, scroll to form
-        if (window.location.hash === '#contact' && window.innerWidth <= 768) {
-            setTimeout(function() {
-                const form = document.getElementById('contactForm');
-                if (form) {
-                    form.scrollIntoView({ behavior: 'smooth', block: 'start' });
-                }
-            }, 100);
-        }
     </script>
 </body>
 </html>
