--- a/ai-m365.html
+++ b/ai-m365.html
@@ -241,7 +241,7 @@
                 <li><a href="index.html#services">Services</a></li>
                 <li><a href="index.html#expertise">Expertise</a></li>
                 <li><a href="index.html#work">Recent Work</a></li>
-                <li><a href="ai-m365.html" class="active">AI & M365</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#contact" class="btn btn-primary">Talk to us</a>
@@ -545,7 +545,7 @@
                         </div>
                         <div class="contact-method">
                             <div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg></div>
-                            <div class="contact-method-text"><span>Email</span><a href="mailto:info@chesapeake.biz">info@chesapeake.biz</a></div>
+                            <div class="contact-method-text"><span>Email</span><a href="/cdn-cgi/l/email-protection#86efe8e0e9c6e5eee3f5e7f6e3e7ede3a8e4effc"><span class="__cf_email__" data-cfemail="4d24232b220d2e25283e2c3d282c2628632f2437">[email&#160;protected]</span></a></div>
                         </div>
                         <div class="contact-method">
                             <div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg></div>
@@ -583,7 +583,7 @@
                 <div class="footer-brand"><a href="index.html" class="logo"><div class="logo-mark">CS</div><span class="logo-text">Chesapeake Systems</span></a><p>Strategic advisory and program leadership for enterprise IT.</p></div>
                 <div class="footer-col"><h5>Services</h5><ul><li><a href="index.html#services">Strategic Advisory</a></li><li><a href="index.html#services">Program Leadership</a></li></ul></div>
                 <div class="footer-col"><h5>Expertise</h5><ul><li><a href="index.html#expertise">Healthcare IT</a></li><li><a href="index.html#expertise">Federal</a></li><li><a href="index.html#expertise">Emerging Tech</a></li><li><a href="ai-m365.html">AI & M365</a></li></ul></div>
-                <div class="footer-col"><h5>Company</h5><ul><li><a href="#contact">Contact</a></li><li><a href="https://www.linkedin.com/company/chesapeakesystems/">LinkedIn</a></li></ul></div>
+                <div class="footer-col"><h5>Company</h5><ul><li><a href="about.html">About</a></li><li><a href="#contact">Contact</a></li><li><a href="https://www.linkedin.com/company/chesapeakesystems/">LinkedIn</a></li></ul></div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Chesapeake Systems. All rights reserved.</p>
@@ -592,7 +592,7 @@
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Mobile menu
         const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
         const navLinks = document.querySelector('.nav-links');
@@ -652,12 +652,4 @@
                 } else {
                     alert('Oops! There was a problem sending your message. Please try again.');
                 }
-            } catch (error) {
-                alert('Oops! There was a problem sending your message. Please try again.');
-            }
-            submitBtn.textContent = originalText;
-            submitBtn.disabled = false;
-        });
-    </script>
-</body>
-</html>
+            } catch (erro
