--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#expertise">Expertise</a></li>
                 <li><a href="#work">Recent Work</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#contact" class="btn btn-primary">Talk to us</a>
@@ -382,7 +383,7 @@
                     <p>Tell us about your initiative and we'll get back to you within one business day.</p>
                     <div class="contact-methods">
                         <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z"/></svg></div><div class="contact-method-text"><span>Phone</span><a href="tel:4438425595">(443) 842-5595</a></div></div>
-                        <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg></div><div class="contact-method-text"><span>Email</span><a href="mailto:info@chesapeake.biz">info@chesapeake.biz</a></div></div>
+                        <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><path d="M22 6l-10 7L2 6"/></svg></div><div class="contact-method-text"><span>Email</span><a href="/cdn-cgi/l/email-protection#70191e161f3013181503110015111b155e12190a"><span class="__cf_email__" data-cfemail="f59c9b939ab5969d9086948590949e90db979c8f">[email&#160;protected]</span></a></div></div>
                         <div class="contact-method"><div class="contact-method-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg></div><div class="contact-method-text"><span>Location</span><p>Baltimore, Maryland</p></div></div>
                     </div>
                 </div>
@@ -414,7 +415,7 @@
                 <div class="footer-brand"><a href="#" class="logo"><div class="logo-mark">CS</div><span class="logo-text">Chesapeake Systems</span></a><p>Strategic advisory and program leadership for enterprise IT.</p></div>
                 <div class="footer-col"><h5>Services</h5><ul><li><a href="#services">Strategic Advisory</a></li><li><a href="#services">Program Leadership</a></li></ul></div>
                 <div class="footer-col"><h5>Expertise</h5><ul><li><a href="#expertise">Healthcare IT</a></li><li><a href="#expertise">Federal</a></li><li><a href="#expertise">Emerging Tech</a></li><li><a href="#expertise">Microsoft</a></li></ul></div>
-                <div class="footer-col"><h5>Company</h5><ul><li><a href="#contact">Contact</a></li><li><a href="https://www.linkedin.com/company/chesapeakesystems/">LinkedIn</a></li></ul></div>
+                <div class="footer-col"><h5>Company</h5><ul><li><a href="about.html">About</a></li><li><a href="#contact">Contact</a></li><li><a href="https://www.linkedin.com/company/chesapeakesystems/">LinkedIn</a></li></ul></div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Chesapeake Systems. All rights reserved.</p>
@@ -422,7 +423,7 @@
             </div>
         </div>
     </footer>
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Mobile menu
         const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
         const navLinks = document.querySelector('.nav-links');
@@ -492,12 +493,3 @@
             const urlParams = new URLSearchParams(window.location.search);
             const interest = urlParams.get('interest');
             if (interest) {
-                const interestSelect = document.getElementById('interest');
-                if (interestSelect) {
-                    interestSelect.value = interest;
-                }
-            }
-        })();
-    </script>
-</body>
-</html>
